// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`full query 1`] = `
Object {
  "data": Object {
    "currentProject": Object {
      "config": null,
      "manifestUrl": "exp://mock-manifest-url",
      "messages": Object {
        "pageInfo": Object {
          "lastCursor": "3",
        },
      },
      "projectDir": "test-project-dir",
      "settings": Object {
        "hostType": "lan",
      },
      "sources": Array [
        Object {
          "__typename": "Issues",
          "id": "Source:issues",
          "messages": Object {
            "count": 1,
            "nodes": Array [
              Object {
                "__typename": "Issue",
                "id": "Issue:fake-issue",
                "msg": "Warning: Fake error.",
                "time": "2018-05-07T13:07:56.540Z",
              },
            ],
          },
          "name": "Issues",
        },
        Object {
          "__typename": "Process",
          "id": "Source:metro",
          "messages": Object {
            "count": 3,
            "nodes": Array [
              Object {
                "__typename": "LogMessage",
                "id": "3",
                "msg": "Starting Metro Bundler on port 19003.",
                "time": "2018-05-07T13:01:14.738Z",
              },
              Object {
                "__typename": "MetroInitializeStarted",
                "id": "4",
                "msg": "Metro Bundler ready.",
                "time": "2018-05-07T13:01:14.878Z",
              },
              Object {
                "__typename": "LogMessage",
                "id": "6",
                "msg": "Tunnel connected.",
                "time": "2018-05-07T13:01:16.117Z",
              },
            ],
          },
          "name": "Metro Bundler",
        },
        Object {
          "__typename": "Device",
          "id": "ebe8cd5c-9aab-48e9-9d00-0ee0e9ec3710",
          "messages": Object {
            "count": 1,
            "nodes": Array [
              Object {
                "__typename": "DeviceMessage",
                "id": "74accc01-a61d-461f-b55e-f98fb629422c:0",
                "msg": "Running application \\"main\\" with appParams:",
                "time": "2018-05-07T13:07:59.594Z",
              },
            ],
          },
          "name": "Pixel",
        },
      ],
    },
    "projectManagerLayout": Object {
      "__typename": "ProjectManagerLayout",
      "selected": null,
      "sources": Array [],
    },
    "userSettings": Object {
      "sendTo": "fake-send-to",
    },
  },
}
`;

exports[`message queries 1`] = `
Object {
  "data": Object {
    "currentProject": Object {
      "sources": Array [
        Object {
          "messages": Object {
            "count": 0,
            "nodes": Array [],
          },
        },
        Object {
          "messages": Object {
            "count": 1,
            "nodes": Array [
              Object {
                "__typename": "LogMessage",
                "id": "3",
                "msg": "Starting Metro Bundler on port 19003.",
                "time": "2018-05-07T13:01:14.738Z",
              },
            ],
          },
        },
      ],
    },
  },
}
`;

exports[`message queries 2`] = `
Object {
  "data": Object {
    "currentProject": Object {
      "sources": Array [
        Object {
          "messages": Object {
            "count": 0,
            "nodes": Array [],
          },
        },
        Object {
          "messages": Object {
            "count": 3,
            "nodes": Array [
              Object {
                "__typename": "LogMessage",
                "id": "3",
                "msg": "Starting Metro Bundler on port 19003.",
                "time": "2018-05-07T13:01:14.738Z",
              },
              Object {
                "__typename": "MetroInitializeStarted",
                "id": "4",
                "msg": "Metro Bundler ready.",
                "time": "2018-05-07T13:01:14.878Z",
              },
              Object {
                "__typename": "LogMessage",
                "id": "6",
                "msg": "Tunnel connected.",
                "time": "2018-05-07T13:01:16.117Z",
              },
            ],
          },
        },
        Object {
          "messages": Object {
            "count": 1,
            "nodes": Array [
              Object {
                "__typename": "DeviceMessage",
                "id": "74accc01-a61d-461f-b55e-f98fb629422c:0",
                "msg": "Running application \\"main\\" with appParams:",
                "time": "2018-05-07T13:07:59.594Z",
              },
            ],
          },
        },
      ],
    },
  },
}
`;

exports[`message queries 3`] = `
Object {
  "data": Object {
    "currentProject": Object {
      "sources": Array [
        Object {
          "messages": Object {
            "count": 0,
            "nodes": Array [],
          },
        },
        Object {
          "messages": Object {
            "count": 4,
            "nodes": Array [
              Object {
                "__typename": "LogMessage",
                "id": "3",
                "msg": "Starting Metro Bundler on port 19003.",
                "time": "2018-05-07T13:01:14.738Z",
              },
              Object {
                "__typename": "MetroInitializeStarted",
                "id": "4",
                "msg": "Metro Bundler ready.",
                "time": "2018-05-07T13:01:14.878Z",
              },
              Object {
                "__typename": "LogMessage",
                "id": "6",
                "msg": "Tunnel connected.",
                "time": "2018-05-07T13:01:16.117Z",
              },
              Object {
                "__typename": "BuildProgress",
                "id": "7",
                "msg": "Building JavaScript bundle",
                "progress": 0,
                "time": "2018-05-07T13:07:56.540Z",
              },
            ],
          },
        },
        Object {
          "messages": Object {
            "count": 1,
            "nodes": Array [
              Object {
                "__typename": "DeviceMessage",
                "id": "74accc01-a61d-461f-b55e-f98fb629422c:0",
                "msg": "Running application \\"main\\" with appParams:",
                "time": "2018-05-07T13:07:59.594Z",
              },
            ],
          },
        },
      ],
    },
  },
}
`;

exports[`message queries 4`] = `
Object {
  "data": Object {
    "currentProject": Object {
      "sources": Array [
        Object {
          "messages": Object {
            "count": 0,
            "nodes": Array [],
          },
        },
        Object {
          "messages": Object {
            "count": 4,
            "nodes": Array [
              Object {
                "__typename": "LogMessage",
                "id": "3",
                "msg": "Starting Metro Bundler on port 19003.",
                "time": "2018-05-07T13:01:14.738Z",
              },
              Object {
                "__typename": "MetroInitializeStarted",
                "id": "4",
                "msg": "Metro Bundler ready.",
                "time": "2018-05-07T13:01:14.878Z",
              },
              Object {
                "__typename": "LogMessage",
                "id": "6",
                "msg": "Tunnel connected.",
                "time": "2018-05-07T13:01:16.117Z",
              },
              Object {
                "__typename": "BuildProgress",
                "id": "7",
                "msg": "Building JavaScript bundle",
                "progress": 50,
                "time": "2018-05-07T13:07:56.540Z",
              },
            ],
          },
        },
        Object {
          "messages": Object {
            "count": 1,
            "nodes": Array [
              Object {
                "__typename": "DeviceMessage",
                "id": "74accc01-a61d-461f-b55e-f98fb629422c:0",
                "msg": "Running application \\"main\\" with appParams:",
                "time": "2018-05-07T13:07:59.594Z",
              },
            ],
          },
        },
      ],
    },
  },
}
`;

exports[`message queries 5`] = `
Object {
  "data": Object {
    "currentProject": Object {
      "sources": Array [
        Object {
          "messages": Object {
            "count": 1,
            "nodes": Array [
              Object {
                "__typename": "Issue",
                "id": "Issue:fake-issue",
                "msg": "Warning: Fake error.",
                "time": "2018-05-07T13:07:56.540Z",
              },
            ],
          },
        },
        Object {
          "messages": Object {
            "count": 4,
            "nodes": Array [
              Object {
                "__typename": "LogMessage",
                "id": "3",
                "msg": "Starting Metro Bundler on port 19003.",
                "time": "2018-05-07T13:01:14.738Z",
              },
              Object {
                "__typename": "MetroInitializeStarted",
                "id": "4",
                "msg": "Metro Bundler ready.",
                "time": "2018-05-07T13:01:14.878Z",
              },
              Object {
                "__typename": "LogMessage",
                "id": "6",
                "msg": "Tunnel connected.",
                "time": "2018-05-07T13:01:16.117Z",
              },
              Object {
                "__typename": "BuildProgress",
                "id": "7",
                "msg": "Building JavaScript bundle",
                "progress": 50,
                "time": "2018-05-07T13:07:56.540Z",
              },
            ],
          },
        },
        Object {
          "messages": Object {
            "count": 1,
            "nodes": Array [
              Object {
                "__typename": "DeviceMessage",
                "id": "74accc01-a61d-461f-b55e-f98fb629422c:0",
                "msg": "Running application \\"main\\" with appParams:",
                "time": "2018-05-07T13:07:59.594Z",
              },
            ],
          },
        },
      ],
    },
  },
}
`;

exports[`message queries 6`] = `
Object {
  "data": Object {
    "currentProject": Object {
      "sources": Array [
        Object {
          "messages": Object {
            "count": 1,
            "nodes": Array [
              Object {
                "__typename": "Issue",
                "id": "Issue:fake-issue",
                "msg": "Warning: Fake error.",
                "time": "2018-05-07T13:07:56.540Z",
              },
            ],
          },
        },
        Object {
          "messages": Object {
            "count": 4,
            "nodes": Array [
              Object {
                "__typename": "LogMessage",
                "id": "3",
                "msg": "Starting Metro Bundler on port 19003.",
                "time": "2018-05-07T13:01:14.738Z",
              },
              Object {
                "__typename": "MetroInitializeStarted",
                "id": "4",
                "msg": "Metro Bundler ready.",
                "time": "2018-05-07T13:01:14.878Z",
              },
              Object {
                "__typename": "LogMessage",
                "id": "6",
                "msg": "Tunnel connected.",
                "time": "2018-05-07T13:01:16.117Z",
              },
              Object {
                "__typename": "BuildProgress",
                "id": "7",
                "msg": "Building JavaScript bundle",
                "progress": 50,
                "time": "2018-05-07T13:07:56.540Z",
              },
            ],
          },
        },
        Object {
          "messages": Object {
            "count": 1,
            "nodes": Array [
              Object {
                "__typename": "DeviceMessage",
                "id": "74accc01-a61d-461f-b55e-f98fb629422c:0",
                "msg": "Running application \\"main\\" with appParams:",
                "time": "2018-05-07T13:07:59.594Z",
              },
            ],
          },
        },
      ],
    },
  },
}
`;

exports[`message queries 7`] = `
Object {
  "data": Object {
    "currentProject": Object {
      "sources": Array [
        Object {
          "messages": Object {
            "count": 0,
            "nodes": Array [],
          },
        },
        Object {
          "messages": Object {
            "count": 4,
            "nodes": Array [
              Object {
                "__typename": "LogMessage",
                "id": "3",
                "msg": "Starting Metro Bundler on port 19003.",
                "time": "2018-05-07T13:01:14.738Z",
              },
              Object {
                "__typename": "MetroInitializeStarted",
                "id": "4",
                "msg": "Metro Bundler ready.",
                "time": "2018-05-07T13:01:14.878Z",
              },
              Object {
                "__typename": "LogMessage",
                "id": "6",
                "msg": "Tunnel connected.",
                "time": "2018-05-07T13:01:16.117Z",
              },
              Object {
                "__typename": "BuildProgress",
                "id": "7",
                "msg": "Building JavaScript bundle",
                "progress": 50,
                "time": "2018-05-07T13:07:56.540Z",
              },
            ],
          },
        },
        Object {
          "messages": Object {
            "count": 1,
            "nodes": Array [
              Object {
                "__typename": "DeviceMessage",
                "id": "74accc01-a61d-461f-b55e-f98fb629422c:0",
                "msg": "Running application \\"main\\" with appParams:",
                "time": "2018-05-07T13:07:59.594Z",
              },
            ],
          },
        },
      ],
    },
  },
}
`;

exports[`subscriptions 1`] = `
Array [
  Object {
    "data": Object {
      "messages": Object {
        "node": Object {
          "__typename": "Issue",
          "id": "Issue:fake-issue",
          "msg": "Warning: Fake error.",
          "source": Object {
            "id": "Source:issues",
          },
          "time": "2018-05-07T13:07:56.540Z",
        },
        "type": "ADDED",
      },
    },
  },
  Object {
    "data": Object {
      "messages": Object {
        "node": Object {
          "__typename": "LogMessage",
          "id": "3",
          "msg": "Starting Metro Bundler on port 19003.",
          "source": Object {
            "id": "Source:metro",
          },
          "time": "2018-05-07T13:01:14.738Z",
        },
        "type": "ADDED",
      },
    },
  },
  Object {
    "data": Object {
      "messages": Object {
        "node": Object {
          "__typename": "Issue",
          "id": "Issue:fake-issue",
          "msg": "Warning: Fake error.",
          "source": Object {
            "id": "Source:issues",
          },
          "time": "2018-05-07T13:07:56.540Z",
        },
        "type": "UPDATED",
      },
    },
  },
  Object {
    "data": Object {
      "messages": Object {
        "node": Object {
          "__typename": "DeviceMessage",
          "id": "74accc01-a61d-461f-b55e-f98fb629422c:0",
          "msg": "Running application \\"main\\" with appParams:",
          "source": Object {
            "id": "ebe8cd5c-9aab-48e9-9d00-0ee0e9ec3710",
          },
          "time": "2018-05-07T13:07:59.594Z",
        },
        "type": "ADDED",
      },
    },
  },
  Object {
    "data": Object {
      "messages": Object {
        "node": Object {
          "__typename": "Issue",
          "id": "Issue:fake-issue",
          "msg": "Warning: Fake error.",
          "source": Object {
            "id": "Source:issues",
          },
          "time": "2018-05-07T13:07:56.540Z",
        },
        "type": "DELETED",
      },
    },
  },
  Object {
    "data": Object {
      "messages": Object {
        "node": Object {
          "__typename": "MetroInitializeStarted",
          "id": "4",
          "msg": "Metro Bundler ready.",
          "source": Object {
            "id": "Source:metro",
          },
          "time": "2018-05-07T13:01:14.878Z",
        },
        "type": "ADDED",
      },
    },
  },
  Object {
    "data": Object {
      "messages": Object {
        "node": Object {
          "__typename": "LogMessage",
          "id": "6",
          "msg": "Tunnel connected.",
          "source": Object {
            "id": "Source:metro",
          },
          "time": "2018-05-07T13:01:16.117Z",
        },
        "type": "ADDED",
      },
    },
  },
  Object {
    "data": Object {
      "messages": Object {
        "node": Object {
          "__typename": "BuildProgress",
          "id": "7",
          "msg": "Building JavaScript bundle",
          "progress": 0,
          "source": Object {
            "id": "Source:metro",
          },
          "time": "2018-05-07T13:07:56.540Z",
        },
        "type": "ADDED",
      },
    },
  },
  Object {
    "data": Object {
      "messages": Object {
        "node": Object {
          "__typename": "BuildProgress",
          "id": "7",
          "msg": "Building JavaScript bundle",
          "progress": 50,
          "source": Object {
            "id": "Source:metro",
          },
          "time": "2018-05-07T13:07:56.540Z",
        },
        "type": "UPDATED",
      },
    },
  },
]
`;
